--- a/Player FreezerPublic/bin/plugin.yml
+++ b/Player FreezerPublic/bin/plugin.yml
@@ -1,13 +1,15 @@
 name: PlayerFreezer
 main: me.mc_cloud.playerfreezer.Main
 description: Admin tool that freezes players
-version: 1.2
+version: 1.3
 author: MC_Cloud
 api-version: 1.18
 
 commands:
   freeze:
   unfreeze:
+  freezegun:
+    aliases: [fg]
   
 permissions:
   playerFreezer.use:
